add contribution fee
